# vt-yfinance-proxy

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  DEPLOY_QUICK.md  Dockerfile  README.md  deploy-docker.sh  deploy-systemd.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: main.py  schemas.py
app/routers/: finance_data.py  market.py
app/services/: finance_data_service.py  yfinance_service.py
docs/: 系统使用手册.md  系统功能文档.md  系统安装部署手册.md  系统设计文档.md
scripts/: install_systemd.sh
tests/: test_api_integration.py  test_finance_data.py
