[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vt-yfinance-proxy"
version = "0.1.0"
description = "Yahoo Finance proxy API for internal network usage"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "yfinance>=0.2.36",
    "pandas>=2.2",
    "pydantic>=2.6",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
